--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "react": "latest",
     "react-cookie": "^4.1.1",
     "react-dom": "latest",
-    "react-wrap-balancer": "^0.1.5"
+    "react-wrap-balancer": "0.4.0"
   },
   "devDependencies": {
     "@types/node": "^17",
